--- a/index.html
+++ b/index.html
@@ -48,12 +48,16 @@
                         <p>I am a second year Ph.D. student in computer science at <a
                                 href="https://mila.quebec/">Mila</a>/Université de Montréal,
                             <a href="https://diro.umontreal.ca/">DIRO</a>, under the supervision of <a
-                                href="http://www.iro.umontreal.ca/~slacoste/">Dr. Simon Lacoste-Julien</a>. Here is our
-                            <a href="images/Mila_Group.jpg">group</a>.
+                                href="http://www.iro.umontreal.ca/~slacoste/"> Professor Simon Lacoste-Julien.</a>. Here
+                            is our
+                            <a href="images/Mila_Group.jpg">group</a>. Here is my <a href="images/CV_2_0.pdf"
+                                target="_blank">CV</a>.
 
-                        <p>My research interest is understanding and improving optimization algorithms in modern machine
-                            learning and deep learning. Here is my <a href="images/CV_021524.pdf"
-                                target="_blank">CV</a>.</p>
+                        <p>My research interest is understanding optimization algorithms in modern machine learning. By
+                            developing theoretical frameworks that capture problem-specific structures, I aim to improve
+                            optimizer efficiency and robustness, enabling fast and reliable predictions and
+                            decision-making.
+                        </p>
 
                         <p>I was born in Gansu and grow up in Guangzhou, China. I obtained my Bachlor's (combined honors
                             in computer science and mathematics) and Master's degree at the University of British
@@ -82,8 +86,8 @@
                         <div class="row">
                             <div class="col-8 col-12-small">
                                 <h4>Understanding Adam Requires Better Rotation Dependent Assumptions</h4>
-                                <p>Arxiv preprint, in submission <a href="https://arxiv.org/abs/2410.19964"
-                                        target="_blank">Paper</a> </p>
+                                <p>Opt Workshop @ Neurips 2024, full paper in submission <a
+                                        href="https://arxiv.org/abs/2410.19964" target="_blank">Paper</a> </p>
                                 <p> L. Maes*, <b>T. H. Zhang*</b>, A. Jolicoeur-Martineau, I. Mitliagkas, D. Scieur,
                                     S. Lacoste-Julien, C. Guille-Escuret
                                 </p>
@@ -159,6 +163,14 @@
                         </header>
                         <div class="row">
                             <div class="col-6 col-12-small">
+                                <p>Understanding Adam Requires Better Rotation Dependent Assumptions: Montreal MLOpt
+                                    <a href="https://mtl-mlopt.github.io/talks_entries/2024/2024_10_30_Lucas_Helen.html"
+                                        target="_blank">Abstract</a>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6 col-12-small">
                                 <p>Safe Reinforcement Learning from Human Feedback: RLHF reading group @Mila
                                     <a href="images/srlhf.pdf" target="_blank">Slides</a>
                                 </p>
@@ -204,18 +216,7 @@
                         </div>
                     </div>
                 </section>
-                <section id="teaching">
-                    <div class="content">
-                        <header>
-                            <h3>Teaching Assistant</h3>
-                        </header>
-                        <p>Sept 2023- Dec. 2023: Mila/Polytechnique Montreal INF8245E - Machine Learning</p>
-                        <p>July 2017- Apr. 2023: UBC CPSC 532M/340: Machine Learning and Data Mining</p>
-                        <p>Jan. 2018- Apr. 2018: UBC Math 152: Linear Systems</p>
-                        <p>Jan. 2017- Apr. 2018: UBC CPSC 121: Models of Computation</p>
-                        <p>July 2017- Aug. 2017: UBC Math 102: Integral Calculus</p>
-                    </div>
-                </section>
+
                 <section id="Contact">
                     <div class="content">
                         <header>
