--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                             <h2>Tianyue (Helen) Zhang 张天玥</h2>
                             <p>Ph.D. student @ Mila</p>
                         </header>
-                        <p>I am a second year Ph.D. student in computer science at <a
+                        <p>I am a third year PhD student in computer science at <a
                                 href="https://mila.quebec/">Mila</a>/Université de Montréal,
                             <a href="https://diro.umontreal.ca/">DIRO</a>, under the supervision of <a
                                 href="http://www.iro.umontreal.ca/~slacoste/"> Professor Simon Lacoste-Julien.</a>. Here
                             is our
-                            <a href="images/Mila_Group.jpg">group</a>. Here is my <a href="images/CV_2_0.pdf"
+                            <a href="images/Mila_Group.jpg">group</a>. Here is my <a href="images/cv.pdf"
                                 target="_blank">CV</a>.
 
                         <p>My research interest is understanding optimization algorithms in modern machine learning. By
@@ -76,7 +76,7 @@
                     <div>
                         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
                     </div>
-                    <div><img src="images/pic1.jpeg" alt="" width="240" height="320" /></div>
+                    <div><img src="images/self.jpeg" alt="" width="360" /></div>
                 </section>
                 <section id="Publications">
                     <div class="content">
@@ -86,12 +86,28 @@
                         <div class="row">
                             <div class="col-8 col-12-small">
                                 <h4>Understanding Adam Requires Better Rotation Dependent Assumptions</h4>
-                                <p>Opt Workshop @ Neurips 2024, full paper in submission <a
-                                        href="https://arxiv.org/abs/2410.19964" target="_blank">Paper</a> </p>
-                                <p> L. Maes*, <b>T. H. Zhang*</b>, A. Jolicoeur-Martineau, I. Mitliagkas, D. Scieur,
-                                    S. Lacoste-Julien, C. Guille-Escuret
+                                <p>NeurIPS 2025 <a href="https://arxiv.org/abs/2410.19964" target="_blank">Paper</a>
+                                </p>
+                                <p> <b>T. H. Zhang*</b>, L. Maes*, A. Milligan, A. Jolicoeur-Martineau, I. Mitliagkas,
+                                    D. Scieur, S. Lacoste-Julien, C. Guille-Escuret
                                 </p>
                                 <p></p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-8 col-12-small">
+                                <h4>Connecting Thompson Sampling and UCB: Towards More Efficient Trade-offs Between
+                                    Privacy and Regret</h4>
+                                <p>ICML 2025 <a href="https://arxiv.org/abs/2505.02383" target="_blank">Paper</a></p>
+                                <p>B. Hu, Z. Huang, <b>T. H. Zhang</b>, M. Lécuyer, N. Hegde </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-8 col-12-small">
+                                <h4>Addressing Concept Mislabeling in Concept Bottleneck Models Through Preference
+                                    Optimization</h4>
+                                <p>ICML 2025 <a href="https://arxiv.org/abs/2504.18026" target="_blank">Paper</a></p>
+                                <p>E. Penaloza, <b>T. H. Zhang</b>, L. Charlin, M.E. Zarlenga </p>
                             </div>
                         </div>
                         <div class="row">
@@ -100,25 +116,6 @@
                                 <p>ICML 2024 <a href="https://arxiv.org/abs/2406.04558" target="_blank">Paper</a> </p>
                                 <p>M. Sohrabi*, J. Ramirez*, <b>T. H. Zhang</b>, S. Lacoste-Julien and J. Gallego-Posada
                                 </p>
-                                <p></p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-8 col-12-small">
-                                <h4>Efficient and Adaptive Posterior Sampling Algorithms for Bandits</h4>
-                                <p><a href="https://arxiv.org/abs/2405.01010" target="_blank">Paper</a></p>
-                                <p>B. Hu, Z. Huang, <b>T. H. Zhang</b>, M. Lécuyer, N. Hegde </p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-8 col-12-small">
-                                <h4>From 6235149080811616882909238708 to 29: Vanilla Thompson Sampling Revisited
-                                </h4>
-                                <p>Opt Workshop @ Neurips 2023 <a href="https://opt-ml.org/papers/2023/paper85.pdf"
-                                        target="_blank">Paper</a>
-                                    <a href="images/Opt_poster.pptx.pdf">Poster</a>
-                                </p>
-                                <p>B. Hu, <b>T. H. Zhang</b></p>
                                 <p></p>
                             </div>
                         </div>
@@ -156,67 +153,6 @@
                         </div>
                     </div>
                 </section>
-                <section id="talk">
-                    <div class="content">
-                        <header>
-                            <h3>Talks</h3>
-                        </header>
-                        <div class="row">
-                            <div class="col-6 col-12-small">
-                                <p>Understanding Adam Requires Better Rotation Dependent Assumptions: Montreal MLOpt
-                                    <a href="https://mtl-mlopt.github.io/talks_entries/2024/2024_10_30_Lucas_Helen.html"
-                                        target="_blank">Abstract</a>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-6 col-12-small">
-                                <p>Safe Reinforcement Learning from Human Feedback: RLHF reading group @Mila
-                                    <a href="images/srlhf.pdf" target="_blank">Slides</a>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-6 col-12-small">
-                                <p>Deep exploration via randomized value function: RLRG 2023 Spring
-                                    <a href="images/RLSVI.pdf" target="_blank">Slides</a>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-6 col-12-small">
-                                <p>Transformers, large language-models, and the magic behind chatGPT: Guest Lecture
-                                    for CPSC 340
-                                    <a href="https://ubc.ca.panopto.com/Panopto/Pages/Viewer.aspx?id=73aee5a4-e197-4f7f-b6be-afda010b9027"
-                                        target="_blank">Recording</a>
-                                    <a href="images/chatGPT.pdf" target="_blank">Slides</a>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-6 col-12-small">
-                                <p>Language models are few-shot learners: MLRG 2022 Fall
-                                    <a href="images/GPT-3.pdf" target="_blank">Slides</a>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-6 col-12-small">
-                                <p>Active Learning for semantic segmentation: MLRG 2022 Summer
-                                    <a href="images/Active_learning.pdf" target="_blank">Slides</a>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-6 col-12-small">
-                                <p>Probabilistic topic modelling
-                                    <a href="images/PTM.pdf" target="_blank">Slides</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-
                 <section id="Contact">
                     <div class="content">
                         <header>
