--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <p>I am a third year PhD student in computer science at <a
                                 href="https://mila.quebec/">Mila</a>/Université de Montréal,
                             <a href="https://diro.umontreal.ca/">DIRO</a>, under the supervision of <a
-                                href="http://www.iro.umontreal.ca/~slacoste/"> Professor Simon Lacoste-Julien.</a>. Here
+                                href="http://www.iro.umontreal.ca/~slacoste/"> Dr. Simon Lacoste-Julien</a>. Here
                             is our
                             <a href="images/Mila_Group.jpg">group</a>. Here is my <a href="images/cv.pdf"
                                 target="_blank">CV</a>.
